test/syntax/invalid/try-without-clause.ts
// expect: VZG2002
try {}
